--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harsha's resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,6 +37,10 @@
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
                         <span class="text">Jamshedpur, Jharkhand, India</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                        <span class="text"><a href="https://github.com/helloitsme1412">GitHub</a></span>
                     </li>
                 </ul>
             </div>
@@ -114,45 +120,24 @@
                 <h2 class="title2">Professional Skills</h2>
                 <div class="box2">
                     <h4>HTML</h4>
-                    <div class="percent">
-                        <div style="width: 95%;"></div>
-                    </div>
                 </div>
                 <div class="box2">
                     <h4>CSS</h4>
-                    <div class="percent">
-                        <div style="width: 90%;"></div>
-                    </div>
                 </div>
                 <div class="box2">
                     <h4>JavaScript</h4>
-                    <div class="percent">
-                        <div style="width: 95%;"></div>
-                    </div>
                 </div>
                 <div class="box2">
                     <h4>Java</h4>
-                    <div class="percent">
-                        <div style="width: 70%;"></div>
-                    </div>
                 </div>
                 <div class="box2">
                     <h4>C</h4>
-                    <div class="percent">
-                        <div style="width: 80%;"></div>
-                    </div>
                 </div>
                 <div class="box2">
                     <h4>Bootstrap</h4>
-                    <div class="percent">
-                        <div style="width: 95%;"></div>
-                    </div>
                 </div>
                 <div class="box2">
                     <h4>React.js</h4>
-                    <div class="percent">
-                        <div style="width: 60%;"></div>
-                    </div>
                 </div>
             </div>
             <div class="about project">
@@ -169,6 +154,16 @@
                     <h4>Kepeer App</h4>
                     <p>A google keep notes clone using React</p>
                 </div>
+            </div>
+            <div class="about Achivements">
+                <h2 class="title2">Achievements</h2>
+                <ul>
+                    <li>Co-ordinator of Vehemence Debate society(KIIT)</li>
+                    <li>Participated in a number of Debates, MUNs and various public speaking competitions</li>
+                    <li>Participated in the Albert Barrow creative writing competion</li>
+                    <li>Secured the 7th Rank in IEO(ENglish Olympiad) on a zonal level</li>
+                    <li>Captain of the winning team in ASISC REgional Volleyball meet 2019</li>
+                </ul>
             </div>
             <div class="about interest">
                 <h2 class="title2">Interest</h2>
