--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
                     <h4>Kepeer App</h4>
                     <p>A google keep notes clone using React</p>
                 </div>
+                <div class="box2">
+                    <h4>A pomodoro timer</h4>
+                    <p>A pomodoro timer using HTML CSS and JavaScript and React.js</p>
+                </div>
+                <div class="box2">
+                    <h4>A weather app</h4>
+                    <p>A HTML CSS and JavaScript and React.js project to tell you the accurate weather</p>
+                </div>
             </div>
             <div class="about Achivements">
                 <h2 class="title2">Achievements</h2>
