--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                         <h4>Kalinga Institute of Industrial Technology</h4>
                     </li>
                     <li>
-                        <h5>2005-2017</h5>
-                        <h4>Matriculation</h4>
+                        <h5>2017-2020</h5>
+                        <h4>High school</h4>
                         <h4>J.H.Tarapore School</h4>
                     </li>
                     <li>
-                        <h5>2017-2020</h5>
-                        <h4>High school</h4>
+                        <h5>2005-2017</h5>
+                        <h4>Matriculation</h4>
                         <h4>J.H.Tarapore School</h4>
                     </li>
                 </ul>
@@ -119,25 +119,7 @@
             <div class="about skills">
                 <h2 class="title2">Professional Skills</h2>
                 <div class="box2">
-                    <h4>HTML</h4>
-                </div>
-                <div class="box2">
-                    <h4>CSS</h4>
-                </div>
-                <div class="box2">
-                    <h4>JavaScript</h4>
-                </div>
-                <div class="box2">
-                    <h4>Java</h4>
-                </div>
-                <div class="box2">
-                    <h4>C</h4>
-                </div>
-                <div class="box2">
-                    <h4>Bootstrap</h4>
-                </div>
-                <div class="box2">
-                    <h4>React.js</h4>
+                    <h4>HTML,  CSS,  JavaScript,  Java <br>C,  Bootstrap,  React.js</h4>
                 </div>
             </div>
             <div class="about project">
@@ -162,6 +144,13 @@
                     <h4>A weather app</h4>
                     <p>A HTML CSS and JavaScript and React.js project to tell you the accurate weather</p>
                 </div>
+            </div>
+            <div class="about Achivements">
+                <h2 class="title2">Certifications</h2>
+                <ul>
+                    <li><a class="anchor" href="https://www.hackerrank.com/certificates/c16ffba52215">Problem Solving(Basics)</a></li>
+                    <li><a class="anchor" href="https://www.hackerrank.com/certificates/d753d313fc19">CSS certificate</a></li>
+                </ul>
             </div>
             <div class="about Achivements">
                 <h2 class="title2">Achievements</h2>
