--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="about skills">
                 <h2 class="title2">Professional Skills</h2>
                 <div class="box2">
-                    <h4>HTML,  CSS,  JavaScript,  Java <br>C,  Bootstrap,  React.js</h4>
+                    <h4>HTML,  CSS,  JavaScript,  Java <br>C,  Bootstrap,  React.js, python, C, C++</h4>
                 </div>
             </div>
             <div class="about project">
